--- a/configs/kie/vi_layoutxlm/ser_vi_layoutxlm_xfund_zh.yml
+++ b/configs/kie/vi_layoutxlm/ser_vi_layoutxlm_xfund_zh.yml
@@ -3,7 +3,7 @@ Global:
   epoch_num: &epoch_num 200
   log_smooth_window: 10
   print_batch_step: 10
-  save_model_dir: ./output/ser_vi_layoutxlm_wildreceipt_zh
+  save_model_dir: ./output/ser_vi_layoutxlm_wildreceipt
   save_epoch_step: 2000
   # evaluation is run every 10 iterations after the 0th iteration
   eval_batch_step: [ 0, 19 ]
@@ -27,7 +27,7 @@ Architecture:
   Transform:
   Backbone:
     name: LayoutXLMForSer
-    pretrained: True
+    pretrained: False
     checkpoints:
     # one of base or vi
     mode: vi
