--- a/configs/kie/vi_layoutxlm/ser_vi_layoutxlm_xfund_zh.yml
+++ b/configs/kie/vi_layoutxlm/ser_vi_layoutxlm_xfund_zh.yml
@@ -27,7 +27,7 @@ Architecture:
   Transform:
   Backbone:
     name: LayoutXLMForSer
-    pretrained: False
+    pretrained: True
     checkpoints:
     # one of base or vi
     mode: vi
