--- a/configs/kie/kie_unet_sdmgr.yml
+++ b/configs/kie/kie_unet_sdmgr.yml
@@ -12,7 +12,7 @@ Global:
   # 2. If you want to finetune the pretrained models we provide in the docs,
   #    you should set load_static_weights as False.
   load_static_weights: False
-  cal_metric_during_train: True
+  cal_metric_during_train: False
   pretrained_model: 
   checkpoints:
   save_inference_dir:
