--- a/configs/kie/vi_layoutxlm/ser_vi_layoutxlm_xfund_zh.yml
+++ b/configs/kie/vi_layoutxlm/ser_vi_layoutxlm_xfund_zh.yml
@@ -3,7 +3,7 @@ Global:
   epoch_num: &epoch_num 200
   log_smooth_window: 10
   print_batch_step: 10
-  save_model_dir: ./output/ser_vi_layoutxlm_wildreceipt
+  save_model_dir: ./output/ser_vi_layoutxlm_xfund_zh
   save_epoch_step: 2000
   # evaluation is run every 10 iterations after the 0th iteration
   eval_batch_step: [ 0, 19 ]
@@ -14,10 +14,10 @@ Global:
   infer_img: ppstructure/docs/kie/input/zh_val_42.jpg
   # if you want to predict using the groundtruth ocr info,
   # you can use the following config
-  # infer_img: train_data/wildreceipt/zh_val/val.json
+  # infer_img: train_data/XFUND/zh_val/val.json
   # infer_mode: False
 
-  save_res_path: ./output/ser/wildreceipt_zh/res
+  save_res_path: ./output/ser/xfund_zh/res
   kie_rec_model_dir: 
   kie_det_model_dir:
 
@@ -53,7 +53,7 @@ Optimizer:
     
 PostProcess:
   name: VQASerTokenLayoutLMPostProcess
-  class_path: &class_path train_data/wildreceipt/class_list.txt
+  class_path: &class_path train_data/XFUND/class_list_xfun.txt
 
 Metric:
   name: VQASerTokenMetric
@@ -62,9 +62,9 @@ Metric:
 Train:
   dataset:
     name: SimpleDataSet
-    data_dir: train_data/wildreceipt/
+    data_dir: train_data/XFUND/zh_train/image
     label_file_list: 
-      - train_data/wildreceipt/ser_train.json
+      - train_data/XFUND/zh_train/train.json
     ratio_list: [ 1.0 ]
     transforms:
       - DecodeImage: # load image
@@ -101,9 +101,9 @@ Train:
 Eval:
   dataset:
     name: SimpleDataSet
-    data_dir: train_data/wildreceipt/
+    data_dir: train_data/XFUND/zh_val/image
     label_file_list:
-      - train_data/wildreceipt/ser_val.json
+      - train_data/XFUND/zh_val/val.json
     transforms:
       - DecodeImage: # load image
           img_mode: RGB
