--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 shapely
 scikit-image
-imgaug==0.4.0
+imgaug
 pyclipper
 lmdb
 tqdm
 numpy
 visualdl
 rapidfuzz
-opencv-contrib-python==4.4.0.46
+opencv-contrib-python
 cython
 lxml
 premailer
